--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <p>📍 Pune, Maharashtra, India</p>
                                 <div class="social-links">
                                     <a href="https://github.com/Anuj3937" target="_blank" class="social-link">GitHub</a>
-                                    <a href="https://linkedin.com/in/anujpathak" target="_blank" class="social-link">LinkedIn</a>
+                                    <a href="https://www.linkedin.com/in/anuj-pathak-8053b2261/" target="_blank" class="social-link">LinkedIn</a>
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                         <h3>Social</h3>
                         <div class="social-links">
                             <a href="https://github.com/Anuj3937" target="_blank">GitHub</a>
-                            <a href="https://linkedin.com/in/anujpathak" target="_blank">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/anuj-pathak-8053b2261/" target="_blank">LinkedIn</a>
                         </div>
                     </div>
                 </div>
